--- a/pom.xml
+++ b/pom.xml
@@ -23,8 +23,10 @@
     <dependency>
       <groupId>org.activiti</groupId>
       <artifactId>activiti-engine</artifactId>
-      <version>6.0.0</version>
+      <!--<version>6.0.0</version>-->
+      <version>5.18.0</version>
     </dependency>
+
 
     <dependency>
       <groupId>mysql</groupId>
