--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger=INFO, ACT
+log4j.rootLogger=DEBUG, ACT
 
 log4j.appender.ACT=org.apache.log4j.ConsoleAppender
 log4j.appender.ACT.layout=org.apache.log4j.PatternLayout
